# Proctora

./: .env.example  .gitignore  CONTRIBUTING.md  DB.sql  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/proctora/: __init__.py  __main__.py  app.py  config.py  routes.py
src/proctora/database/: __init__.py  repository.py  schema.py
src/proctora/services/: __init__.py  alerts.py  proctoring.py
src/proctora/static/: app.min.js  style.min.css
src/proctora/static/src/: app.js  style.css
src/proctora/templates/: confirmation.html  index.html  workspace.html
tests/: test_app.py
